[package]
name = "slot_machine"
version = "0.1.0"
authors = ["Andrey Vikulov <avikuloff@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.7.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
