[package]
name = "slot_machine"
version = "0.1.1"
authors = ["Andrey Vikulov <avikuloff@yandex.ru>"]
license = "MIT OR Apache-2.0"
description = "Bluejay Bonanza Slot Machine"
keywords = ["game", "slot-machine"]
categories = ["game-engines"]
repository = "https://github.com/avikuloff/slot_machine/"
documentation = "https://docs.rs/slot_machine"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.7.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
